--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "react-bootstrap": "^2.9.1",
     "react-bootstrap-sweetalert": "^5.2.0",
     "react-cookie": "^6.1.1",
+    "react-date-picker": "^10.6.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-loading-skeleton": "^3.4.0",
     "react-native-public-ip": "^1.0.2",
     "react-paginate": "^8.2.0",
     "react-pro-sidebar": "^1.1.0",
@@ -38,7 +40,9 @@
     "redux": "^5.0.0",
     "slick-carousel": "^1.8.1",
     "startbootstrap-simple-sidebar": "^6.0.6",
-    "web-vitals": "^2.1.4"
+    "use-scan-detection": "^0.2.3",
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
